crates/toml/tests/snapshots/invalid/string/multiline-no-close-03.stderr
TOML parse error at line 4, column 7
  |
4 | eteta
  |       ^
invalid multi-line basic string, expected `"`
